# tha-launcher

./: .gitignore  Cargo.toml  LICENSE  build.rs
images/: icon.png~
src/: main.rs
ui/: about-tab.slint  app-window.slint  gallery-tab.slint  globals.slint  menu-button.slint  options-checkbox.slint  options-tab.slint  play-tab.slint  types.slint
