[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.6.1"
serde = "1.0.219"
serde_derive = "1.0.219"
slint = "1.8.0"

[build-dependencies]
slint-build = "1.8.0"
